--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.2",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.539.0",
+    "lunar-javascript": "^1.7.4",
     "next": "15.4.6",
     "node-fetch": "^3.3.2",
     "openai": "^5.12.2",
